tests/ui/fail/import_internal_exports.rs
use wrongodb::{BTree, BlockFile, CommandRegistry, Transaction, TxnId};

fn main() {}
