tests/ui/fail/import_internal_exports.stderr
error[E0432]: unresolved imports `wrongodb::BTree`, `wrongodb::BlockFile`, `wrongodb::CommandRegistry`, `wrongodb::Transaction`, `wrongodb::TxnId`
 --> tests/ui/fail/import_internal_exports.rs:1:16
  |
1 | use wrongodb::{BTree, BlockFile, CommandRegistry, Transaction, TxnId};
  |                ^^^^^  ^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^ no `TxnId` in the root
  |                |      |          |                |
  |                |      |          |                no `Transaction` in the root
  |                |      |          no `CommandRegistry` in the root
  |                |      no `BlockFile` in the root
  |                no `BTree` in the root
  |
  = help: consider importing this variant instead:
          mongodb::error::ErrorKind::Transaction
